# rp2350sim

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  USER_GUIDE.md  build_all.bat  build_bevy.bat  build_macroquad.bat  build_winapi.bat  clippy.toml  run_bevy.bat  run_macroquad.bat  run_winapi.bat  rungui.bat  rungui2.bat  runheadless.bat  runtests.bat  rustfmt.toml
assets/board/: pico2w_layout.ron  pico2w_pinmap.json
assets/fonts/: README.md
assets/icons/: README.md
assets/shaders/: heatmap.frag  heatmap.vert  waveform.frag  waveform.vert
assets/themes/: dark.ron  light.ron
configs/: debug.toml  default.toml  fast.toml  peripheral.toml
configs/boards/: generic_rp2350.toml  pico2w.toml
configs/devices/: i2c_eeprom.toml  spi_display.toml  uart_terminal.toml  ws2812.toml
crates/rp2350sim-app/: Cargo.toml
crates/rp2350sim-app/src/: app.rs  args.rs  boot.rs  config.rs  headless.rs  lib.rs  main.rs  runtime.rs  services.rs  state.rs  tests.rs
crates/rp2350sim-app/src/gui/: bevy_gui.rs  macroquad_gui.rs  mod.rs  winapi_gui.rs
crates/rp2350sim-bus/: Cargo.toml
crates/rp2350sim-clocks/: Cargo.toml
crates/rp2350sim-core/: Cargo.toml
crates/rp2350sim-cpu-arm/: Cargo.toml
crates/rp2350sim-cpu-arm/src/: backend.rs  core.rs  exception.rs  lib.rs  nvic.rs  psr.rs  regs.rs  state.rs  systick.rs  vector_table.rs
crates/rp2350sim-cpu-arm/src/thumb/: alu.rs  branch.rs  decode.rs  execute.rs  load_store.rs  mod.rs  system.rs  tables.rs
crates/rp2350sim-cpu-common/: Cargo.toml
crates/rp2350sim-cpu-hazard3/: Cargo.toml
crates/rp2350sim-debug/: Cargo.toml
crates/rp2350sim-debug/src/: lib.rs
crates/rp2350sim-debug/src/breakpoints/: mod.rs
crates/rp2350sim-debug/src/control/: mod.rs
crates/rp2350sim-debug/src/disasm/: arm_thumb.rs  mod.rs  pio.rs  rv32.rs
crates/rp2350sim-debug/src/inspect/: cpu.rs  device.rs  memory.rs  mod.rs  pio.rs
crates/rp2350sim-debug/src/symbols/: dwarf.rs  elf_symbols.rs  lookup.rs  map.rs  mod.rs
crates/rp2350sim-debug/src/watchpoints/: access.rs  mod.rs  read.rs  write.rs
crates/rp2350sim-devices/: Cargo.toml
crates/rp2350sim-devices/src/: lib.rs
crates/rp2350sim-devices/src/adc/: mod.rs
crates/rp2350sim-devices/src/bootram/: mod.rs
crates/rp2350sim-devices/src/busctrl/: mod.rs
crates/rp2350sim-devices/src/common/: config.rs  fifo.rs  irq_flags.rs  mod.rs  reg32.rs  status.rs
crates/rp2350sim-devices/src/coresight/: mod.rs
crates/rp2350sim-devices/src/dma/: mod.rs
crates/rp2350sim-devices/src/gpio/: mod.rs
crates/rp2350sim-devices/src/hstx/: mod.rs
crates/rp2350sim-devices/src/i2c/: mod.rs
crates/rp2350sim-devices/src/i2s/: mod.rs
crates/rp2350sim-devices/src/interp/: mod.rs
crates/rp2350sim-devices/src/mpu/: mod.rs
crates/rp2350sim-devices/src/nvic/: mod.rs
crates/rp2350sim-devices/src/otp/: mod.rs
crates/rp2350sim-devices/src/pio/: mod.rs
crates/rp2350sim-devices/src/plic/: mod.rs
crates/rp2350sim-devices/src/pll/: mod.rs
crates/rp2350sim-devices/src/powman/: mod.rs
crates/rp2350sim-devices/src/pwm/: mod.rs
crates/rp2350sim-devices/src/reset/: mod.rs
crates/rp2350sim-devices/src/rtc/: mod.rs
crates/rp2350sim-devices/src/sha256/: mod.rs
crates/rp2350sim-devices/src/spi/: mod.rs
crates/rp2350sim-devices/src/sysinfo/: mod.rs
crates/rp2350sim-devices/src/systick/: mod.rs
crates/rp2350sim-devices/src/timer/: mod.rs
crates/rp2350sim-devices/src/trng/: mod.rs
crates/rp2350sim-devices/src/uart/: mod.rs
crates/rp2350sim-devices/src/usb/: mod.rs
crates/rp2350sim-devices/src/watchdog/: mod.rs
crates/rp2350sim-devices/src/wlan_stub/: mod.rs
crates/rp2350sim-devices/src/xip/: mod.rs
crates/rp2350sim-difftest/: Cargo.toml
crates/rp2350sim-ecs/: Cargo.toml
crates/rp2350sim-gdb/: Cargo.toml
crates/rp2350sim-gpu/: Cargo.toml
crates/rp2350sim-gpu/src/: buffers.rs  lib.rs  meshes.rs  renderer.rs  resources.rs  textures.rs
crates/rp2350sim-gpu/src/board/: board_renderer.rs  mod.rs  overlays.rs  pins.rs
crates/rp2350sim-gpu/src/heatmap/: gpio_heatmap.rs  memory_heatmap.rs  mod.rs
crates/rp2350sim-gpu/src/timeline/: lanes.rs  markers.rs  mod.rs  timeline.rs
crates/rp2350sim-gpu/src/waveforms/: cache.rs  lines.rs  mod.rs  waveform.rs  zoom.rs
crates/rp2350sim-irq/: Cargo.toml
crates/rp2350sim-irq/src/: enable.rs  inject.rs  lib.rs  lines.rs  pending.rs  priority.rs  routing.rs  trace.rs
crates/rp2350sim-mem/: Cargo.toml
crates/rp2350sim-mem/src/: faults.rs  lib.rs  memory.rs  memory_map.rs  perms.rs  region_kind.rs  watch.rs
crates/rp2350sim-mem/src/bootrom/: boot_flow.rs  bootrom_image.rs  mod.rs
crates/rp2350sim-mem/src/flash/: flash_image.rs  mod.rs  uf2_loader.rs  xip_map.rs
crates/rp2350sim-mem/src/loader/: bin_loader.rs  elf_loader.rs  hex_loader.rs  mod.rs
crates/rp2350sim-mem/src/sram/: mod.rs  sram_bank.rs  sram_state.rs
crates/rp2350sim-project/: Cargo.toml
crates/rp2350sim-save/: Cargo.toml
crates/rp2350sim-save/src/: checkpoint.rs  lib.rs  load.rs  replay.rs  save.rs  version.rs
crates/rp2350sim-save/src/parts/: clocks.rs  cpu.rs  devices.rs  irq.rs  memory.rs  mod.rs  pio.rs
crates/rp2350sim-scripting/: Cargo.toml
crates/rp2350sim-scripting/src/: bindings.rs  commands.rs  engine.rs  lib.rs
crates/rp2350sim-scripting/src/api/: gpio.rs  memory.rs  mod.rs  simulator.rs
crates/rp2350sim-soc/: Cargo.toml
crates/rp2350sim-soc/src/: board.rs  board_profile.rs  boot_mode.rs  fabric.rs  firmware_test.rs  gdb.rs  init.rs  lib.rs  reset.rs  soc.rs  system.rs  wiring.rs
crates/rp2350sim-soc/src/memory_layout/: generic.rs  mod.rs  pico2w.rs  rp2350.rs
crates/rp2350sim-soc/src/profiles/: arm_dual.rs  hazard3_dual.rs  mod.rs  test_minimal.rs
crates/rp2350sim-trace/: Cargo.toml
crates/rp2350sim-ui/: Cargo.toml
crates/rp2350sim-virtual-devices/: Cargo.toml
docs/: API.md  ARCHITECTURE.md  PERIPHERALS.md
examples/: README.md
examples/arm/: blink.hex  (+3 more)
tests/: checkpoint_tests.rs  dual_core_tests.rs  firmware_tests.rs  gdb_tests.rs  integration_tests.rs  peripheral_tests.rs  soc_integration_tests.rs  vcd_tests.rs
(+206 files in other folders)
