[package]
name = "rp2350sim-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
parking_lot.workspace = true
macroquad.workspace = true
rp2350sim-core.workspace = true
rp2350sim-trace.workspace = true