[package]
name = "rp2350sim-irq"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
rp2350sim-core.workspace = true