[package]
name = "rp2350sim-soc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
bitflags.workspace = true
parking_lot.workspace = true
rp2350sim-core.workspace = true
rp2350sim-bus.workspace = true
rp2350sim-mem.workspace = true
rp2350sim-cpu-common.workspace = true
rp2350sim-cpu-arm.workspace = true
rp2350sim-cpu-hazard3.workspace = true
rp2350sim-clocks.workspace = true                                                                        
rp2350sim-irq.workspace = true                                                                           
rp2350sim-devices.workspace = true
rp2350sim-debug.workspace = true
rp2350sim-gdb.workspace = true